--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,28 @@
 name: socloud
+
+on:
+  schedule:
+  - cron: "0 1 * * *"
+  
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+    
+  workflow_dispatch:
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+        cache: 'pip' # caching pip dependencies
+    - name: Install requirements
+      run: |
+        pip install -r ./requirements.txt
+    - name: Run 
+      run: |
+        python ./zodgame/zodgame.py "${{secrets.SOCLOUD_COOKIE}}"
+    - uses: gautamkrishnar/keepalive-workflow@master
