--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,6 @@ jobs:
         pip install -r ./requirements.txt
     - name: Run 
       run: |
-        python ./checkin.py '${{secrets.SOCLOUD_COOKIE}}'
+        python ./checkin.py ${{secrets.SOCLOUD_COOKIE}}
         #echo '${{secrets.SOCLOUD_COOKIE}}'
     - uses: gautamkrishnar/keepalive-workflow@master
