--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,16 @@
 name: socloud
 
 on:
-  schedule:
-  - cron: "0 1 * * *"
+  # schedule:
+  # - cron: "0 1 * * *"
   
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
+  # pull_request:
+  #   branches: [ main ]
     
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: windows-latest
@@ -18,11 +19,11 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.11'
-        cache: 'pip' # caching pip dependencies
-    - name: Install requirements
-      run: |
-        pip install -r ./requirements.txt
+        # cache: 'pip' # caching pip dependencies
+    # - name: Install requirements
+    #   run: |
+    #     pip install -r ./requirements.txt
     - name: Run 
       run: |
-        python ./checkin.py "${{secrets.SOCLOUD_COOKIE}}"
-    - uses: gautamkrishnar/keepalive-workflow@master
+        python ./checkin.py '${{secrets.SOCLOUD_COOKIE_JSON}}'
+    # - uses: gautamkrishnar/keepalive-workflow@master
