--- a/.github/workflows/actionsTest.yml
+++ b/.github/workflows/actionsTest.yml
@@ -4,10 +4,10 @@ on:
   # schedule:
   # - cron: "0 1 * * *"
   
-  # push:
-  #   branches: [ main ]
-  # pull_request:
-  #   branches: [ main ]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   
   workflow_dispatch:
 
