--- a/.github/workflows/actionsTest.yml
+++ b/.github/workflows/actionsTest.yml
@@ -5,9 +5,9 @@ on:
   # - cron: "0 1 * * *"
   
   push:
-    branches: [ main ]
+    branches: [actions_secrets_test]
   pull_request:
-    branches: [ main ]
+    branches: [actions_secrets_test]
   
   workflow_dispatch:
 
