--- a/.github/workflows/actionsTest.yml
+++ b/.github/workflows/actionsTest.yml
@@ -25,5 +25,5 @@ jobs:
     #     pip install -r ./requirements.txt
     - name: Run 
       run: |
-        python ./checkin.py '${{secrets.SOCLOUD_COOKIE_JSON}}'
+        python ./checkin.py "${{secrets.SOCLOUD_COOKIE_JSON}}"
     # - uses: gautamkrishnar/keepalive-workflow@master
