--- a/.github/workflows/actionsTest.yml
+++ b/.github/workflows/actionsTest.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
@@ -25,5 +25,5 @@ jobs:
     #     pip install -r ./requirements.txt
     - name: Run 
       run: |
-        python ./checkin.py "${{secrets.SOCLOUD_COOKIE_JSON}}"
+        python ./checkin.py '${{secrets.SOCLOUD_COOKIE_JSON}}'
     # - uses: gautamkrishnar/keepalive-workflow@master
