--- a/.github/workflows/socloud.yml
+++ b/.github/workflows/socloud.yml
@@ -5,9 +5,9 @@ on:
   - cron: "0 1 * * *"
   
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
     
   workflow_dispatch:
 jobs:
