--- a/.github/workflows/socloud.yml
+++ b/.github/workflows/socloud.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Run 
       run: |
         python ./checkin.py "${{secrets.SOCLOUD_COOKIE}}"
-    - uses: gautamkrishnar/keepalive-workflow@master
+    - uses: liskin/gh-workflow-keepalive@main
